# openGLEngine

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure-debug.sh  configure.sh  main.cpp  run-debug.sh  run.sh
glad/: glad.c
source/: CMakeLists.txt  firstWindow.cpp  firstWindow.h  input.cpp  input.h  main.cpp  triangle.cpp  triangle.h
source/shaders/: shader.cpp  shader.h
